# gitea-pika-drivers

./: Cargo.toml  Makefile  cargo-config-v3.toml  driver-db.json  main.sh  mainv3.sh  tmp-rust-file-working
.github/: github_pushback.sh
.github/workflows/: build-canaryv3.yml  build-nestv3.yml  github-pushback.yml  release-canaryv3.yml  release-nestv3.yml
data/: com.github.pikaos-linux.pikadrivers.desktop  com.github.pikaos-linux.pikadrivers.gschema.xml  com.pika.drivers.gschema.xml  dialog-error.sh  dialog-success.sh  generate_driver_definitions.sh  generate_package_info.sh  modify-driver.sh  pika-drivers.desktop
debian/: changelog  control  rules
locales/: bg_BG.json  cs_CZ.json  de_DE.json  en_US.json  es_ES.json  fr_FR.json  nl_NL.json  sv_SE.json  tr_TR.json  uk_UA.json
pika-build-config/: amd64-v3.sh  i386.sh
src/: config.rs  main.rs  style.css
src/build_ui/: mod.rs
src/save_window_size/: mod.rs
