[package]
name = "test-gtk4-libadw-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.6.6", package = "gtk4" }
tokio = { features = ["full"] }
vte = { version = "0.6.0", package = "vte4" }
