[package]
name = "pika-drivers"
version = "0.4.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.5.3", package = "libadwaita" }
async-channel = "2.2.0"
gtk = { version = "0.7.3", package = "gtk4" }
